# UpdateApp

./: .gitignore  CLAUDE.md  README.md  latest.json
.claude/: launch.json  settings.local.json
.claude/Agents et competences/docs/: organigramme.md  rapport-avancement-2026-04-24.md  workflow-projet.md
.claude/agents/: data-analyste.md  data-lead.md  design-lead.md  design-ux-ui.md  dev-backend.md  dev-frontend.md  dev-lead.md  direction-ceo.md  direction-cfo.md  direction-clo.md  direction-cmo.md  direction-cpo.md  direction-cto.md  finance-specialiste.md  growth-lead.md  legal-amf-auditor.md  legal-privacy-officer.md  marketing-content.md  marketing-lead.md  marketing-seo.md  ml-quant-analyste.md  qa-lead.md  qa-testeur.md  realtime-data-engineer.md  recherche-competiteurs.md  recherche-lead.md  security-officer.md  translator-expert.md
.claude/docs/: exemple-projet.md
.claude/skills/creation-visuel-pub/: SKILL.md
.claude/skills/protocole-communication/: SKILL.md
app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css  types.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  selftest_sample.txt
app/src/components/: AppRow.tsx  DebugLogsModal.tsx  Header.tsx  (+7 more)
docs/architecture/: SPEC-V0.1-FINAL.md  SPEC-V0.1.md
scripts/: build-release.bat  fix-rebuild.bat  install-prereqs.ps1  make-exe.bat  publish-release.ps1  run-dev-admin.bat  run-dev.bat  setup-icons.bat
(+4 files in other folders)
