[package]
name = "wealthwise-updater"
version = "0.2.1"
description = "Visual Windows app updater powered by winget"
authors = ["Felix-Antoine Philippon"]
edition = "2021"

[lib]
name = "wealthwise_updater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.10", features = ["json", "tls"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
